// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ToeristischeVerhuur /> > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _OverviewPage_47d7c0 _ToeristischeVerhuur_702859"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Toeristische verhuur"
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.91 5v13.2h11.635V7.933h11.637C29.396 7.933 32 10.56 32 13.8V27h-2.91v-4.4H2.91V27H0V5h2.91zM8.5 8c2.49 0 4.5 2.01 4.5 4.5S10.99 17 8.5 17 4 14.99 4 12.5 6.01 8 8.5 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/"
        >
          <svg
            aria-hidden="true"
            aria-label="chevron-links-icoon"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Home
        </a>
        <h2
          class="ams-heading ams-heading--level-1"
        >
          Toeristische verhuur
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <p>
        Hieronder vindt u een overzicht van uw vergunningen voor toeristische verhuur.
      </p>
      <p>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/veelgevraagd/toeristenbelasting-2c7c2"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            aria-label="chevron-rechts-icoon"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
          Meer over toeristenbelasting
        </a>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.toeristischeverhuur.nl/portaal/login"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            aria-label="chevron-rechts-icoon"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
          Vakantieverhuur melden of registratienummer aanvragen
        </a>
      </p>
      <div
        class="_Detail_702859"
      >
        <section
          class="ams-alert ams-alert--warning"
        >
          <div
            class="ams-alert__icon"
          >
            <span
              class="ams-icon ams-icon--size-4"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M33.63 30.9H2.37L18 3zm-24.44-4h17.62L18 11.19z"
                />
                <path
                  d="M17 16.99h2v4.95h-2zm0 5.95h2v1.95h-2z"
                />
              </svg>
            </span>
          </div>
          <div
            class="ams-alert__content"
          >
            <h2
              class="ams-heading ams-heading--level-4"
            >
              Let op!
            </h2>
            <p
              class="ams-paragraph"
            >
              U heeft een vergunning voor vakantieverhuur én bed & breakfast. Het is niet toegestaan om op hetzelfde adres zowel aan vakantieverhuur als bed & breakfast te doen. U moet daarom 1 van deze vergunningen opzeggen.
              <a
                class="_Button_c3ab45 _Button__inline_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _LinkedInline_c3ab45"
                href="https://www.amsterdam.nl/wonen-leefomgeving/wonen/vakantieverhuur/vergunning/"
                rel="external noopener noreferrer"
              >
                Meer informatie over voorwaarden vakantieverhuur
              </a>
              .
            </p>
          </div>
        </section>
      </div>
    </div>
    <section
      class="_SectionCollapsible_b93dc7 _SectionNoBorderBottom_702859"
    >
      <h3
        class="ams-heading ams-heading--level-3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="true"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            aria-label="chevron-rechts-icoon"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Huidige vergunningen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc _TableVergunningen_702859"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Soort vergunning
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Status
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Vanaf
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Tot
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Soort vergunning:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/toeristische-verhuur/vergunning/vakantieverhuur/Z-XXX-000007B"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="chevron-rechts-icoon"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Vergunning vakantieverhuur
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Afgehandeld
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Vanaf:
                  </span>
                  <span>
                    01 augustus 2023
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Tot:
                  </span>
                  <span>
                    30 september 2024
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Soort vergunning:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/toeristische-verhuur/vergunning/bed-and-breakfast/Z-23-2130506"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="chevron-rechts-icoon"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Vergunning bed & breakfast
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Afgehandeld
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Vanaf:
                  </span>
                  <span>
                    22 maart 2023
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Tot:
                  </span>
                  <span>
                    01 juli 2028
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Soort vergunning:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/toeristische-verhuur/vergunning/bed-and-breakfast/Z2023-WK000236"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="chevron-rechts-icoon"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Vergunning bed & breakfast
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Ontvangen
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Vanaf:
                  </span>
                  <span />
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Tot:
                  </span>
                  <span />
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Soort vergunning:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/toeristische-verhuur/vergunning/bed-and-breakfast/Z2023-WK000284"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="chevron-rechts-icoon"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Vergunning bed & breakfast
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Ontvangen
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Vanaf:
                  </span>
                  <span />
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Tot:
                  </span>
                  <span />
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
    <section
      class="_SectionCollapsible_b93dc7 _SectionNoBorderBottom_702859"
    >
      <h3
        class="ams-heading ams-heading--level-3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="true"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            aria-label="chevron-rechts-icoon"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Eerdere vergunningen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc _TableVergunningen_702859"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Soort vergunning
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Status
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Vanaf
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Tot
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Soort vergunning:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/toeristische-verhuur/vergunning/vakantieverhuur/Z-XXX-000007C"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="chevron-rechts-icoon"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Vergunning vakantieverhuur
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Afgehandeld
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Vanaf:
                  </span>
                  <span>
                    01 augustus 2022
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Tot:
                  </span>
                  <span>
                    22 augustus 2023
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Soort vergunning:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/toeristische-verhuur/vergunning/vakantieverhuur/Z-XXX-000007"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="chevron-rechts-icoon"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Vergunning vakantieverhuur
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Afgehandeld
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Vanaf:
                  </span>
                  <span>
                    01 augustus 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Tot:
                  </span>
                  <span>
                    30 september 2021
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Soort vergunning:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/toeristische-verhuur/vergunning/vakantieverhuur/Z-001-000040"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="chevron-rechts-icoon"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Vergunning vakantieverhuur
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Ingetrokken
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Vanaf:
                  </span>
                  <span>
                    01 juni 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Tot:
                  </span>
                  <span>
                    31 mei 2024
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Soort vergunning:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/toeristische-verhuur/vergunning/vakantieverhuur/Z-000-000040"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="chevron-rechts-icoon"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Vergunning vakantieverhuur
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Afgehandeld
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Vanaf:
                  </span>
                  <span>
                    01 juni 2019
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Tot:
                  </span>
                  <span>
                    31 mei 2020
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
    <div
      class="_PageContent_47d7c0"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--level-4 _Label_6f1df2"
        >
          Registratienummer toeristische verhuur
        </h3>
        <div
          class="_Value_6f1df2"
        >
          <article
            class="_RegistrationNumber_702859"
          >
            <span>
              E7B8 B042 8A92 37E5 0363
            </span>
            <br />
            Amstel 1  1012PN Amsterdam
          </article>
          <article
            class="_RegistrationNumber_702859"
          >
            <span>
              BBBBBBBBBBBBBBBBBBBB
            </span>
            <br />
            Amstel 1  1012PN Amsterdam
          </article>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<ToeristscheVerhuurThema /> > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _OverviewPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Toeristische verhuur"
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.91 5v13.2h11.635V7.933h11.637C29.396 7.933 32 10.56 32 13.8V27h-2.91v-4.4H2.91V27H0V5h2.91zM8.5 8c2.49 0 4.5 2.01 4.5 4.5S10.99 17 8.5 17 4 14.99 4 12.5 6.01 8 8.5 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/"
        >
          <svg
            aria-hidden="true"
            aria-label="chevron-links-icoon"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Home
        </a>
        <h2
          class="ams-heading ams-heading--level-1"
        >
          Toeristische verhuur
        </h2>
      </div>
    </header>
    <div
      class="ams-screen ams-screen--wide"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <p
            class="ams-paragraph"
          >
            Hieronder vindt u een overzicht van uw vergunningen voor toeristische verhuur.
          </p>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <ul
            class="ams-link-list"
          >
            <li>
              <a
                class="ams-link-list__link"
                href="https://www.amsterdam.nl/wonen-leefomgeving/wonen/vakantieverhuur/"
                rel="noreferrer"
              >
                <span
                  class="ams-icon ams-icon--size-5"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Meer informatie over particuliere vakantieverhuur
              </a>
            </li>
            <li>
              <a
                class="ams-link-list__link"
                href="https://www.amsterdam.nl/veelgevraagd/toeristenbelasting-2c7c2"
                rel="noreferrer"
              >
                <span
                  class="ams-icon ams-icon--size-5"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Meer over toeristenbelasting
              </a>
            </li>
            <li>
              <a
                class="ams-link-list__link"
                href="https://www.toeristischeverhuur.nl/portaal/login"
                rel="noreferrer"
              >
                <span
                  class="ams-icon ams-icon--size-5"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Vakantieverhuur melden of registratienummer aanvragen
              </a>
            </li>
          </ul>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <div
            class="ams-alert ams-alert--info"
            title="Voorwaarden en regels"
          >
            <div
              class="ams-alert__icon"
            >
              <span
                class="ams-icon ams-icon--size-5"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  viewBox="0 0 28 28"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 0C6.3 0 0 6.3 0 14s6.3 14 14 14 14-6.3 14-14S21.7 0 14 0m0 24C8.5 24 4 19.5 4 14S8.5 4 14 4s10 4.5 10 10-4.5 10-10 10M13 9h2V7h-2zm0 12h2V11h-2z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ams-alert__content"
            >
              <p
                class="ams-paragraph ams-mb--sm"
              >
                U heeft een vergunning voor vakantieverhuur én bed & breakfast. Het is niet toegestaan om op hetzelfde adres zowel aan vakantieverhuur als bed & breakfast te doen. U moet daarom 1 van deze vergunningen opzeggen.
                <a
                  class="_Button_c3ab45 _Button__inline_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _LinkedInline_c3ab45"
                  href="https://www.amsterdam.nl/wonen-leefomgeving/wonen/vakantieverhuur/vergunning/"
                  rel="external noopener noreferrer"
                >
                  Meer informatie over voorwaarden vakantieverhuur
                </a>
                .
              </p>
            </div>
          </div>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <h3
            class="ams-heading ams-heading--level-2"
          >
            Huidige vergunningen
          </h3>
          <div
            class="ams-table"
          >
            <table
              class="ams-table__table _TableV2_4c6825 _HuidigeRegelingen_702859"
            >
              <thead
                class="ams-table__header"
              >
                <tr
                  class="ams-table__row"
                >
                  <th
                    class="ams-table__header-cell"
                  >
                    Soort vergunning
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Zaaknummer
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Status
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Vanaf
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Tot
                  </th>
                </tr>
              </thead>
              <tbody
                class="ams-table__body"
              >
                <tr
                  class="ams-table__row"
                >
                  <td
                    class="ams-table__cell"
                  >
                    <a
                      class="ams-link ams-link--standalone _MaRouterLink__no-underline-fat_aa758a"
                      href="/toeristische-verhuur/vergunning/vakantieverhuur/Z-XXX-000007B"
                    >
                      Vergunning vakantieverhuur
                    </a>
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Z/XXX/000007b
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Verleend
                  </td>
                  <td
                    class="ams-table__cell"
                  />
                  <td
                    class="ams-table__cell"
                  />
                </tr>
                <tr
                  class="ams-table__row"
                >
                  <td
                    class="ams-table__cell"
                  >
                    <a
                      class="ams-link ams-link--standalone _MaRouterLink__no-underline-fat_aa758a"
                      href="/toeristische-verhuur/vergunning/bed-and-breakfast/Z-23-2130506"
                    >
                      Vergunning bed & breakfast
                    </a>
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Z/23/2130506
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Verleend
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    22 maart 2023
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    01 juli 2028
                  </td>
                </tr>
                <tr
                  class="ams-table__row"
                >
                  <td
                    class="ams-table__cell"
                  >
                    <a
                      class="ams-link ams-link--standalone _MaRouterLink__no-underline-fat_aa758a"
                      href="/toeristische-verhuur/vergunning/bed-and-breakfast/Z2023-WK000236"
                    >
                      Vergunning bed & breakfast
                    </a>
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Z2023-WK000236
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Afgehandeld
                  </td>
                  <td
                    class="ams-table__cell"
                  />
                  <td
                    class="ams-table__cell"
                  />
                </tr>
                <tr
                  class="ams-table__row"
                >
                  <td
                    class="ams-table__cell"
                  >
                    <a
                      class="ams-link ams-link--standalone _MaRouterLink__no-underline-fat_aa758a"
                      href="/toeristische-verhuur/vergunning/bed-and-breakfast/Z2023-WK000284"
                    >
                      Vergunning bed & breakfast
                    </a>
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Z2023-WK000284
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Afgehandeld
                  </td>
                  <td
                    class="ams-table__cell"
                  />
                  <td
                    class="ams-table__cell"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <h3
            class="ams-heading ams-heading--level-2"
          >
            Eerdere en afgewezen vergunningen
          </h3>
          <div
            class="ams-table"
          >
            <table
              class="ams-table__table _TableV2_4c6825 _EerdereRegelingen_702859"
            >
              <thead
                class="ams-table__header"
              >
                <tr
                  class="ams-table__row"
                >
                  <th
                    class="ams-table__header-cell"
                  >
                    Soort vergunning
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Zaaknummer
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Status
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Vanaf
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Tot
                  </th>
                </tr>
              </thead>
              <tbody
                class="ams-table__body"
              >
                <tr
                  class="ams-table__row"
                >
                  <td
                    class="ams-table__cell"
                  >
                    <a
                      class="ams-link ams-link--standalone _MaRouterLink__no-underline-fat_aa758a"
                      href="/toeristische-verhuur/vergunning/vakantieverhuur/Z-XXX-000007C"
                    >
                      Vergunning vakantieverhuur
                    </a>
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Z/XXX/000007c
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Verleend
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    01 augustus 2022
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    22 augustus 2023
                  </td>
                </tr>
                <tr
                  class="ams-table__row"
                >
                  <td
                    class="ams-table__cell"
                  >
                    <a
                      class="ams-link ams-link--standalone _MaRouterLink__no-underline-fat_aa758a"
                      href="/toeristische-verhuur/vergunning/vakantieverhuur/Z-XXX-000007"
                    >
                      Vergunning vakantieverhuur
                    </a>
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Z/XXX/000007
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Verlopen
                  </td>
                  <td
                    class="ams-table__cell"
                  />
                  <td
                    class="ams-table__cell"
                  />
                </tr>
                <tr
                  class="ams-table__row"
                >
                  <td
                    class="ams-table__cell"
                  >
                    <a
                      class="ams-link ams-link--standalone _MaRouterLink__no-underline-fat_aa758a"
                      href="/toeristische-verhuur/vergunning/vakantieverhuur/Z-001-000040"
                    >
                      Vergunning vakantieverhuur
                    </a>
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Z/001/000040
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Ingetrokken
                  </td>
                  <td
                    class="ams-table__cell"
                  />
                  <td
                    class="ams-table__cell"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <button
            class="ams-button ams-button--tertiary"
            style="transform: translateX(-1.4rem);"
            type="button"
          >
            Toon meer
          </button>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <h3
            class="ams-heading ams-heading--level-2"
          >
            Registratienummer(s) toeristische verhuur
          </h3>
          <div
            class="ams-table"
          >
            <table
              class="ams-table__table _TableV2_4c6825"
            >
              <thead
                class="ams-table__header"
              >
                <tr
                  class="ams-table__row"
                >
                  <th
                    class="ams-table__header-cell"
                  >
                    Registratienummer
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Adres
                  </th>
                  <th
                    class="ams-table__header-cell"
                  >
                    Geregistreerd op
                  </th>
                </tr>
              </thead>
              <tbody
                class="ams-table__body"
              >
                <tr
                  class="ams-table__row"
                >
                  <td
                    class="ams-table__cell"
                  >
                    E7B8 B042 8A92 37E5 0363
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Amstel 1 1017AB Amsterdam
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    1 januari 2021
                  </td>
                </tr>
                <tr
                  class="ams-table__row"
                >
                  <td
                    class="ams-table__cell"
                  >
                    BBBBBBBBBBBBBBBBBBBB
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    Amstel 1 1017AB Amsterdam
                  </td>
                  <td
                    class="ams-table__cell"
                  >
                    1 januari 2021
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
